--- a/backend/templates/experience.html
+++ b/backend/templates/experience.html
@@ -24,6 +24,7 @@
         <div class="head p-2 justify-content-center">{{message}}</div>
       </h1>
       <p><a class="badge badge-primary badge-pill p-2" style="float:right;" href="{% url 'company' %}"> Search for Company</a></p>
+      <p><strong>{{msg_empty}}</strong></p>
       {% regroup responses by company as company_lists %}
       {% for company_list in company_lists %}
       <p><strong>{{company_list.grouper}}</strong></p>
