Minor Additions Done

--- a/backend/templates/about.html
+++ b/backend/templates/about.html
@@ -110,14 +110,14 @@
         <h2 class="card-title">Why interNito?</h2>
 
         <p class="card-text blog-text">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat
-          error nisi at quibusdam dolores recusandae consectetur, voluptates sit
-          labore, vitae laudantium inventore exercitationem a pariatur sunt,
-          architecto blanditiis esse quae. Lorem ipsum dolor sit amet
-          consectetur adipisicing elit. Repellat error nisi at quibusdam dolores
-          recusandae consectetur, voluptates sit labore, vitae laudantium
-          inventore exercitationem a pariatur sunt, architecto blanditiis esse
-          quae.
+            Not all of you get more than one chance for our internship interviews. 
+            But how do you ace it without having done it ever before? Simple. 
+            You reach out to those who've done it before!
+            interNito was built with this very intention in mind. 
+            If you're a senior, this platform is your way to give back to your juniors 
+            by sharing your experience, and tips for the interview process. Whereas, if 
+            you're a junior, interNito is where you'll come to, to get an idea what you'll 
+            face in the interview process. And also, how you can ace it!
         </p>
         <hr />
       </div>
