--- a/backend/templates/experience.html
+++ b/backend/templates/experience.html
@@ -36,9 +36,11 @@
                         class="card-text summary summary-text"
                         style="height: 10ch; text-overflow: ellipsis; overflow: hidden"
                       >
-                        {{response.summary }}
+                        {{response.summary }}...
                       </p>
-                      <p class="card-text name">{{response.name}}</p>
+                      <p class="card-text name">
+                        <a href="{% url 'profile' response.user.username %}">{{response.name}}</a>
+                      </p>
                       <p class="card-text company capitalize">
                         interned at <strong>{{response.company}}</strong>
                       </p>
