--- a/backend/templates/home.html
+++ b/backend/templates/home.html
@@ -79,7 +79,7 @@
                 class="card-text summary summary-text"
                 style="height: 10ch; text-overflow: ellipsis; overflow: hidden"
               >
-                {{response.summary }}
+                {{response.summary }}...
               </p>
               <p class="card-text name">
                 <a href="{% url 'profile' response.user.username %}">{{response.name}}</a>
