--- a/backend/templates/write.html
+++ b/backend/templates/write.html
@@ -122,7 +122,13 @@
             <div class="form-group row">
                 <label for="company" class="col-sm-2 col-form-label">Company Name</label>
                 <div class="col-sm-10">
-                    <input type="company" name="company" placeholder="Company Name"  class="form-control" value="{{post.company}}" required>
+                    <datalist id="suggestions">
+                        {% for company in companies %}
+                        <option value="{{ company }}">{{ company}}</option>
+                        <!-- Divya -->
+                        {% endfor %}
+                      </datalist>
+                    <input class="form-control" value="{{ post.company }}" list="suggestions" id="suggestions" placeholder="Company Name" autocomplete="on" required name="filter"/>
                 </div>
             </div>
 
