--- a/backend/templates/write.html
+++ b/backend/templates/write.html
@@ -128,7 +128,7 @@
                         <!-- Divya -->
                         {% endfor %}
                       </datalist>
-                    <input class="form-control" value="{{ post.company }}" list="suggestions" id="suggestions" placeholder="Company Name" autocomplete="on" required name="filter"/>
+                    <input class="form-control" value="{{ post.company }}" list="suggestions" id="suggestions" placeholder="Company Name" autocomplete="on" required name="company"/>
                 </div>
             </div>
 
