--- a/backend/templates/register.html
+++ b/backend/templates/register.html
@@ -111,10 +111,12 @@
 			<div class="form-group">
 				<label for="email">Email Address</label>
 				<input type="email" name="email" placeholder="Email Address" required="" class="form-control" id="id_email">
+				<small class="text-danger">**Please use institute email ID</small>
 			</div>
 			<div class="form-group">
 				<label for="username">Username</label>
 				<input type="text username" name="username" required="" class="form-control" id="id_username">
+				<small class="text-danger">**Your user name is auto generated. Don't edit it</small>
 			</div>
 			<div class="form-group">
 				<label for="password">Password</label>
