--- a/backend/templates/login.html
+++ b/backend/templates/login.html
@@ -99,8 +99,9 @@
 		<form action="{% url 'login' %}" method="POST">
 			{% csrf_token %}
 			<div class="form-group">
-				<label for="email">Email Address</label>
+				<label for="email">Username</label>
 				<input type="text email" type="email" name="username" placeholder="Email" required="" class="form-control">
+				<small>Your username is {username}@student.nitw.ac.in</small>
 			</div>
 			<div class="form-group">
 				<label for="password">Password</label>
