--- a/backend/templates/about.html
+++ b/backend/templates/about.html
@@ -3,7 +3,7 @@
 
 <style>
     body{
-        font-family: 'Open Sans', sans-serif;
+        font-family: 'Poppins', sans-serif;
     }
     *:hover{
         -webkit-transition: all 1s ease;
@@ -110,14 +110,21 @@
         <h2 class="card-title">Why interNito?</h2>
 
         <p class="card-text blog-text">
-            Not all of you get more than one chance for our internship interviews. 
-            But how do you ace it without having done it ever before? Simple. 
-            You reach out to those who've done it before!
-            interNito was built with this very intention in mind. 
-            If you're a senior, this platform is your way to give back to your juniors 
-            by sharing your experience, and tips for the interview process. Whereas, if 
-            you're a junior, interNito is where you'll come to, to get an idea what you'll 
-            face in the interview process. And also, how you can ace it!
+            Internships are hard. Their interview processes are even harder. And it is not that you get to redo them if something goes wrong! 
+            So how do you go about something that you've never done before, and yet ace it like a pro? Simple. You take advice from those
+            who have already done it before.
+            <br><br>
+            It is with this cause in mind, that the HTML and DJango files of interNito were brought into existence. We're taught programming 
+            so as to solve a lot of assignments, competitive problems and God knows what not. But, ultimately, it is the real world problems 
+            that need solving. Internships were such a real world problem, and interNito is our proposed solution.
+            <br><br>
+            If you're a senior who's already completed the internship process, then this platform is your opportunity to help your juniors out! 
+            All the preparation that worked (and all that didn't!), all the OT challenges that you skillfully faced, and all the interview questions 
+            that you aced - you can share them all for the upcoming batches to benefit from! 
+            <br><br>
+            And if you're a junior, you don't need to look anywhere else to solve your interview dilemmas! <i>What to do during the interview? What kind 
+            of questions they ask? How to sit? How to talk? How to breath??</i> The website is your one stop to answer all of these questions, are more! 
+            P.S. for the last one, we'd say, just be natural!
         </p>
         <hr />
       </div>
