--- a/backend/templates/post.html
+++ b/backend/templates/post.html
@@ -3,9 +3,10 @@
 <link rel="stylesheet" href="{% static 'css/post.css' %}" />
 
 <style>
-  strong {
-    font-weight: 500;
-  }
+  body{
+    font-family: 'Poppins', sans-serif!important;
+}
+  
 
   .card-title {
     font-weight: 600;
