--- a/backend/templates/profile.html
+++ b/backend/templates/profile.html
@@ -1,155 +1,178 @@
 {% extends 'base.html' %} {% load static %} {% block content %}
 
-<link rel="stylesheet" href="{% static 'css/post.css' %}"/>
+<link rel="stylesheet" href="{% static 'css/post.css' %}" />
 <link rel="stylesheet" href="{% static 'css/experience.css' %}" />
 
 <style>
-    strong {
-        font-weight: 500;
-    }
+  strong {
+    font-weight: 500;
+  }
 
-    .info-card {
-        background-color: white;
-    }
+  .info-card {
+    background-color: white;
+  }
 
-    .title,
-    .card-title {
-        font-weight: 600;
-        font-size: 1.5rem;
-        margin: 10px auto 20px auto;
-    }
+  .title,
+  .card-title {
+    font-weight: 600;
+    font-size: 1.5rem;
+    margin: 10px auto 20px auto;
+  }
 
-    .abt-info-title {
-        margin: 10px;
-        padding: 0;
-    }
+  .abt-info-title {
+    margin: 10px;
+    padding: 0;
+  }
 
-    .blog-text {
-        margin-bottom: 20px;
-    }
-      .popup {
-        position: fixed;
-        padding: 10px;
-        max-width: 500px;
-        border-radius: 10px;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%,-50%);
-        background: rgba(255,255,255,.9);
-        visibility: hidden;
-        opacity: 0;
-        /* "delay" the visibility transition */
-        -webkit-transition: opacity .5s, visibility 0s linear .5s;
-        transition: opacity .5s, visibility 0s linear .5s;
-        z-index: 1;
-      }
-      .popup:target {
-        visibility: visible;
-        opacity: 1;
-        /* cancel visibility transition delay */
-        -webkit-transition-delay: 0s;
-        transition-delay: 0s;
-      }
-      .popup-close {
-        position: absolute;
-        padding: 10px;
-        max-width: 500px;
-        border-radius: 10px;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%,-50%);
-        background: rgba(255,255,255,.9);
-      }
-      .popup .close {
-        position: absolute;
-        right: 5px;
-        top: 5px;
-        padding: 5px;
-        color: #000;
-        transition: color .3s;
-        font-size: 2em;
-        line-height: .6em;
-        font-weight: bold;
-      }
-      .popup .close:hover {
-        color: #00E5EE;
-      }
-      
-      .close-popup {
-        background: rgba(0,0,0,.7);
-        cursor: default;
-        position: fixed;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        opacity: 0;
-        visibility: hidden;
-        /* "delay" the visibility transition */
-        -webkit-transition: opacity .5s, visibility 0s linear .5s;
-        transition: opacity .5s, visibility 0s linear .5s;
-      }
-      .popup:target + .close-popup{  
-        opacity: 1;
-        visibility: visible;
-        /* cancel visibility transition delay */
-        -webkit-transition-delay: 0s;
-        transition-delay: 0s;
-      }
+  .blog-text {
+    margin-bottom: 20px;
+  }
+  .popup {
+    position: fixed;
+    padding: 10px;
+    max-width: 500px;
+    border-radius: 10px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: rgba(255, 255, 255, 0.9);
+    visibility: hidden;
+    opacity: 0;
+    /* "delay" the visibility transition */
+    -webkit-transition: opacity 0.5s, visibility 0s linear 0.5s;
+    transition: opacity 0.5s, visibility 0s linear 0.5s;
+    z-index: 1;
+  }
+  .popup:target {
+    visibility: visible;
+    opacity: 1;
+    /* cancel visibility transition delay */
+    -webkit-transition-delay: 0s;
+    transition-delay: 0s;
+  }
+  .popup-close {
+    position: absolute;
+    padding: 10px;
+    max-width: 500px;
+    border-radius: 10px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: rgba(255, 255, 255, 0.9);
+  }
+  .popup .close {
+    position: absolute;
+    right: 5px;
+    top: 5px;
+    padding: 5px;
+    color: #000;
+    transition: color 0.3s;
+    font-size: 2em;
+    line-height: 0.6em;
+    font-weight: bold;
+  }
+  .popup .close:hover {
+    color: #00e5ee;
+  }
+
+  .close-popup {
+    background: rgba(0, 0, 0, 0.7);
+    cursor: default;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    opacity: 0;
+    visibility: hidden;
+    /* "delay" the visibility transition */
+    -webkit-transition: opacity 0.5s, visibility 0s linear 0.5s;
+    transition: opacity 0.5s, visibility 0s linear 0.5s;
+  }
+  .popup:target + .close-popup {
+    opacity: 1;
+    visibility: visible;
+    /* cancel visibility transition delay */
+    -webkit-transition-delay: 0s;
+    transition-delay: 0s;
+  }
 </style>
 
 <div class="container-fluid body" style="font-family: 'Poppins', sans-serif">
-    <div class="row">
-        <div class="col-lg-3">
-            <div class="card post-card mt-4">
-                <div class="card-body">
-                    <h5 class="card-title">User Profile</h5>
-                    <p class="abt-info-title"><strong>Name: </strong>{{ user.first_name }} {{ user.last_name }}</p>
-                    <p class="abt-info-title"><strong>Email: </strong>{{ user.username }} @student.nitw.ac.in</p>
-                    <p class="abt-info-title"><strong>Username: </strong>{{ user.username }}</p>
-                    <p class="abt-info-title"><strong>Posts: </strong>{{count}}</p>
-                </div>
-            </div>
+  <div class="row">
+    <div class="col-lg-3">
+      <div class="card post-card mt-4">
+        <div class="card-body">
+          <h5 class="card-title">User Profile</h5>
+          <p class="abt-info-title">
+            <strong>Name: </strong>{{ user.first_name }} {{ user.last_name }}
+          </p>
+          <p class="abt-info-title">
+            <strong>Email: </strong>{{ user.username }} @student.nitw.ac.in
+          </p>
+          <p class="abt-info-title">
+            <strong>Username: </strong>{{ user.username }}
+          </p>
+          <p class="abt-info-title"><strong>Posts: </strong>{{count}}</p>
         </div>
-        <div class="col-lg-9">
-        {% for post in posts %}
-            <div class="row">
-                <div class="col">
-                    <div class="card post-card mt-4">
-                        <div class="card-body">
-                            <h4 class="card-title">Post {{ forloop.counter }}</h4>
-                            <h6>Company : {{ post.company }}</h6>
-                            <h6>Eligible Branches : {{ post.branch }}</h6>
-                            <h6>CGPA cut-off : {{ post.cgpa_cutoff }}</h6>
-                            <p class="card-text blog-text">
-                                {{ post.summary }}...
-                            </p>
-                            <a type="button" class="btn btn-outline-primary" href="{% url 'post' post.pk %}">View</a>
-                            {% if is_current_user %}
-                                <a href="{% url 'edit' post.pk %}" class="btn btn-outline-success">Edit</a>
-                                <a href="#popup1" id="delete-btn" class="btn btn-outline-danger">Delete</a>
-                                <div id="popup1" class="popup p-5 shadow-lg" style="border:1px black solid;border-radius:50px; background-color:#fff;">
-                                    <h2>Are you Sure?</h2>
-                                    <p>You won't be able to recover this later!!!</p>
-                                    <div class="btn-group" role="group" aria-label="Basic example">
-                                        <a href="#" id="no-btn" class="btn btn-outline-success">No</a>
-                                        <a href="{% url 'delete' post.pk %}" class="btn btn-outline-danger">Yes</a>
-                                      </div>
-                                  </div>
-                            {% endif %}
-                        </div>
-                    </div>
-                </div>
-            </div>
-        {% endfor %}
-            
-        </div>
-        
+      </div>
     </div>
+    <div class="col-lg-9">
+      {% for post in posts %}
+      <div class="row">
+        <div class="col">
+          <div class="card post-card mt-4">
+            <div class="card-body">
+              <h4 class="card-title">Post {{ forloop.counter }}</h4>
+              <h6>Company : {{ post.company }}</h6>
+              <h6>Eligible Branches : {{ post.branch }}</h6>
+              <h6>CGPA cut-off : {{ post.cgpa_cutoff }}</h6>
+              <p class="card-text blog-text">{{ post.summary }}...</p>
+              <a
+                type="button"
+                class="btn btn-outline-primary"
+                href="{% url 'post' post.pk %}"
+                >View</a
+              >
+              {% if is_current_user %}
+              <a href="{% url 'edit' post.pk %}" class="btn btn-outline-success"
+                >Edit</a
+              >
+              <a href="#popup1" id="delete-btn" class="btn btn-outline-danger"
+                >Delete</a
+              >
+              <div
+                id="popup1"
+                class="popup p-5 shadow-lg"
+                style="
+                  border: 1px black solid;
+                  border-radius: 50px;
+                  background-color: #fff;
+                "
+              >
+                <h2>Are you Sure?</h2>
+                <p>You won't be able to recover this later!!!</p>
+                <div class="btn-group" role="group" aria-label="Basic example">
+                  <a href="#" id="no-btn" class="btn btn-outline-success">No</a>
+                  <a
+                    href="{% url 'delete' post.pk %}"
+                    class="btn btn-outline-danger"
+                    >Yes</a
+                  >
+                </div>
+              </div>
+              {% endif %}
+            </div>
+          </div>
+        </div>
+      </div>
+      {% endfor %}
+    </div>
+  </div>
 </div>
 
 <script>
-    /*var body = document.querySelectorAll('.body:not(#popup1)');
+  /*var body = document.querySelectorAll('.body:not(#popup1)');
     var element = document.getElementById('popup1');
     var delete_btn  = document.getElementById('delete-btn');
     var no_btn  = document.getElementById('no-btn');
