Password Change functionality

--- a/backend/templates/profile.html
+++ b/backend/templates/profile.html
@@ -114,6 +114,7 @@
             <strong>Username: </strong>{{ user.username }}
           </p>
           <p class="abt-info-title"><strong>Posts: </strong>{{count}}</p>
+          <p><a class="btn btn-outline-primary" href="{% url 'change_password' %}">Change Password</a></p>
         </div>
       </div>
     </div>
