--- a/backend/templates/profile.html
+++ b/backend/templates/profile.html
@@ -4,9 +4,9 @@
 <link rel="stylesheet" href="{% static 'css/experience.css' %}" />
 
 <style>
-  strong {
+  /*strong {
     font-weight: 500;
-  }
+  }*/
 
   .info-card {
     background-color: white;
