--- a/backend/templates/change_password.html
+++ b/backend/templates/change_password.html
@@ -104,7 +104,7 @@
     </button>
   </div>
   {% endif %}
-		<h2 class="card-title text-center mb-4 mt-2">Create Your Account!</h2>
+		<h2 class="card-title text-center mb-4 mt-2">Change Your Password</h2>
 		<form action="" method="POST">
 			{% csrf_token %}
 			
