--- a/backend/templates/login.html
+++ b/backend/templates/login.html
@@ -5,12 +5,12 @@
 <!-- <link rel="stylesheet" href="{% static 'css/register.css' %}"> -->
 
 <script type="application/x-javascript">
-  addEventListener("load", function() { 
-    setTimeout(hideURLbar, 0); 
-  }, false); 
-  function hideURLbar(){ 
-    window.scrollTo(0,1); 
-  } 
+  addEventListener("load", function() {
+    setTimeout(hideURLbar, 0);
+  }, false);
+  function hideURLbar(){
+    window.scrollTo(0,1);
+  }
 </script>
 
 <style>
@@ -101,13 +101,13 @@
 
 <div class="card mt-5" style="max-width: 35rem; margin: 20px auto;">
 	<div class="card-body justify-content-center">
-		{{message}}
+		{{msg}}
 		<h2 class="card-title text-center mb-4 mt-2">Login to Your Account</h2>
 		<form action="{% url 'login' %}" method="POST">
 			{% csrf_token %}
 			<div class="form-group">
 				<label for="email">Username</label>
-				
+
 				<div class="input-group">
 					<input type="text email" name="username" placeholder="username" required="" class="username form-control">
 					<div class="input-group-append">
@@ -119,6 +119,9 @@
 				<label for="password">Password</label>
 				<input type="password" name="password" placeholder="password" required="" class="form-control">
 			</div>
+      <div class="form-group text-right">
+                              <a href="{% url 'password_reset'%}">Forgot your password?</a>
+                        </div>
 			<button class="btn submit view-btn mt-3" type="submit">Login</button>
 			<p class="card-text register-text mb-2">Don't have an account? <a href="{% url 'register' %}"> Register
 					Now!</a></p>
