UI Changed for all

--- a/backend/templates/password/password_reset_confirm.html
+++ b/backend/templates/password/password_reset_confirm.html
@@ -1,11 +1,123 @@
-{% extends 'base.html' %}
-{% load static %}
-{% block content %}
-                        <h2 class="font-weight-bold mt-3">Password Reset Confirm</h2>
-                                <p>Please enter your new password.</p>
-                                <form method="POST" class="form-signin">
-                                    {% csrf_token %}
-                                    {{form.as_p}}
-                                    <button class="btn btn-primary" type="submit">Reset password</button>
-                                </form>
+{% extends 'base.html' %} {% load static %} {% block content %}
+<!-- <link rel="stylesheet" href="{% static 'css/register.css' %}" /> -->
+<link rel="stylesheet" href="{% static 'css/experience.css' %}" />
+<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+
+<script type="application/x-javascript">
+	
+  addEventListener("load", function() { 
+    setTimeout(hideURLbar, 0); 
+  }, false); 
+  function hideURLbar(){ 
+    window.scrollTo(0,1); 
+  }         
+</script>
+
+<style>
+	body {
+		background-color: #E5E5E5;
+	}
+
+	* {
+		font-family: 'Poppins', sans-serif;
+	}
+
+	.view-btn {
+		padding: 7px;
+		font-weight: 500;
+		font-size: 1.1rem;
+		color: #76b852;
+		background-color: white;
+		border-radius: 45px;
+		border: 1px solid #76b852;
+		width: 100%;
+	}
+
+	.view-btn:hover {
+		color: white;
+		border-radius: 45px;
+		border: 1px solid #76b852;
+		background-color: #76b852;
+		outline: none;
+		box-shadow: none;
+	}
+
+	.view-btn:focus {
+		outline: none;
+		box-shadow: none;
+	}
+
+	a {
+		text-decoration: none;
+		color: #76b852;
+		font-weight: 500;
+	}
+
+	a:hover {
+		text-decoration: none;
+		color: #76b852;
+		font-weight: 600;
+	}
+
+	textarea:focus {
+		outline: #76b852;
+		border-color: #76b852;
+	}
+
+	.register-text {
+		margin-top: 10px;
+		margin-left: 5px
+	}
+
+	h2 {
+		font-weight: 400;
+	}
+
+	.card {
+		border-radius: 30px;
+	}
+
+	@media only screen and (max-width: 600px) {
+		.card {
+			margin: 20px !important;
+		}
+	}
+
+
+	input {
+		border-radius: 30px !important;
+	}
+</style>
+<!-- //Custom Theme files -->
+<link href="//fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,700,700i" rel="stylesheet">
+</head>
+
+<div class="card mt-5" style="max-width: 35rem; margin: 20px auto;">
+	<div class="card-body justify-content-center">
+    {% if messages %}
+  <div class="alert alert-warning alert-dismissible fade show" role="alert">
+    {% for message in messages %}
+    {{message}}
+  {% endfor %}
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  {% endif %}
+		<h2 class="card-title text-center mb-4 mt-2">Reset Your Password</h2>
+		<form action="" method="POST">
+			{% csrf_token %}
+            <strong><p class="card-title">Please enter your new password.</p></strong>
+			<div class="form-group">
+				<label for="password">New Password</label>
+				<input type="password" name="new_password1" autocomplete="new-password" required id="id_new_password1" class="form-control">
+			</div>
+      <div class="form-group">
+				<label for="password">New Password Confirmation</label>
+				<input type="password" name="new_password2" autocomplete="new-password" required id="id_new_password2" class="form-control">
+			</div>
+      <input class="btn submit view-btn mt-3" type="Submit" value="Reset Password">
+		</form>
+	</div>
+</div>
 {% endblock content %}
