--- a/backend/templates/password/password_reset_complete.html
+++ b/backend/templates/password/password_reset_complete.html
@@ -1,3 +1,112 @@
+{% extends 'base.html' %} {% load static %} {% block content %}
+<!-- <link rel="stylesheet" href="{% static 'css/register.css' %}" /> -->
+<link rel="stylesheet" href="{% static 'css/experience.css' %}" />
+<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+
+<script type="application/x-javascript">
+	
+  addEventListener("load", function() { 
+    setTimeout(hideURLbar, 0); 
+  }, false); 
+  function hideURLbar(){ 
+    window.scrollTo(0,1); 
+  }         
+</script>
+
+<style>
+	body {
+		background-color: #E5E5E5;
+	}
+
+	* {
+		font-family: 'Poppins', sans-serif;
+	}
+
+	.view-btn {
+		padding: 7px;
+		font-weight: 500;
+		font-size: 1.1rem;
+		color: #76b852;
+		background-color: white;
+		border-radius: 45px;
+		border: 1px solid #76b852;
+		width: 100%;
+	}
+
+	.view-btn:hover {
+		color: white;
+		border-radius: 45px;
+		border: 1px solid #76b852;
+		background-color: #76b852;
+		outline: none;
+		box-shadow: none;
+	}
+
+	.view-btn:focus {
+		outline: none;
+		box-shadow: none;
+	}
+
+	a {
+		text-decoration: none;
+		color: #76b852;
+		font-weight: 500;
+	}
+
+	a:hover {
+		text-decoration: none;
+		color: #76b852;
+		font-weight: 600;
+	}
+
+	textarea:focus {
+		outline: #76b852;
+		border-color: #76b852;
+	}
+
+	.register-text {
+		margin-top: 10px;
+		margin-left: 5px
+	}
+
+	h2 {
+		font-weight: 400;
+	}
+
+	.card {
+		border-radius: 30px;
+	}
+
+	@media only screen and (max-width: 600px) {
+		.card {
+			margin: 20px !important;
+		}
+	}
+
+
+	input {
+		border-radius: 30px !important;
+	}
+</style>
+<!-- //Custom Theme files -->
+<link href="//fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,700,700i" rel="stylesheet">
+</head>
+
+<div class="card mt-5" style="max-width: 35rem; margin: 20px auto;">
+	<div class="card-body justify-content-center">
+		<h2 class="font-weight-bold mt-3">Password reset complete</h2>
+        <hr>
+        <p>Your password has been set. You may go ahead and log in now.</p>
+        <a href="{% url 'login'%}" class="btn btn-outline-primary">Log in</a>
+
+	</div>
+</div>
+{% endblock content %}
+
+
+
+{% comment %}
+    
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
@@ -6,3 +115,5 @@
                                 <p>Your password has been set. You may go ahead and log in now.</p>
                                 <a href="{% url 'login'%}" class="btn btn-primary">Log in</a>
 {% endblock content %}
+{% endcomment %}
+    
