--- a/backend/templates/verifycode.html
+++ b/backend/templates/verifycode.html
@@ -1,13 +1,108 @@
-{% extends 'base.html' %}
-{% load static %}
-{% block content %}
-<h1>Code has been sent to your email please verify it by entering it here..(Please check spam Folder also!!)</h1>
-<form class="" method="POST">
-  {% csrf_token %}
-<input type="text" name="code">
-<input type="submit" name="submit">
-</form>
+{% extends 'base.html' %} {% load static %} {% block content %}
+<!-- <link rel="stylesheet" href="{% static 'css/register.css' %}" /> -->
+<link rel="stylesheet" href="{% static 'css/experience.css' %}" />
+<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+
+<script type="application/x-javascript">
+	
+  addEventListener("load", function() { 
+    setTimeout(hideURLbar, 0); 
+  }, false); 
+  function hideURLbar(){ 
+    window.scrollTo(0,1); 
+  }         
+</script>
+
+<style>
+	body {
+		background-color: #E5E5E5;
+	}
+
+	* {
+		font-family: 'Poppins', sans-serif;
+	}
+
+	.view-btn {
+		padding: 7px;
+		font-weight: 500;
+		font-size: 1.1rem;
+		color: #76b852;
+		background-color: white;
+		border-radius: 45px;
+		border: 1px solid #76b852;
+		width: 100%;
+	}
+
+	.view-btn:hover {
+		color: white;
+		border-radius: 45px;
+		border: 1px solid #76b852;
+		background-color: #76b852;
+		outline: none;
+		box-shadow: none;
+	}
+
+	.view-btn:focus {
+		outline: none;
+		box-shadow: none;
+	}
+
+	a {
+		text-decoration: none;
+		color: #76b852;
+		font-weight: 500;
+	}
+
+	a:hover {
+		text-decoration: none;
+		color: #76b852;
+		font-weight: 600;
+	}
+
+	textarea:focus {
+		outline: #76b852;
+		border-color: #76b852;
+	}
+
+	.register-text {
+		margin-top: 10px;
+		margin-left: 5px
+	}
+
+	h2 {
+		font-weight: 400;
+	}
+
+	.card {
+		border-radius: 30px;
+	}
+
+	@media only screen and (max-width: 600px) {
+		.card {
+			margin: 20px !important;
+		}
+	}
 
 
+	input {
+		border-radius: 30px !important;
+	}
+</style>
+<!-- //Custom Theme files -->
+<link href="//fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,700,700i" rel="stylesheet">
+</head>
 
+<div class="card mt-5" style="max-width: 35rem; margin: 20px auto;">
+	<div class="card-body justify-content-center">
+		<p class="font-weight-bold mt-3">Code has been sent to your email please verify it by entering it here..(Please check spam Folder also!!)</p>
+        <hr>
+        <form class="" method="POST">
+          {% csrf_token %}
+        <input class="form-control" type="text" name="code" autofocus>
+        <input class="btn submit view-btn mt-3" type="submit" name="submit" value="Verify">
+        </form>
+
+	</div>
+</div>
 {% endblock content %}
+
