Push from server

--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -78,7 +78,7 @@
 
         {% if request.user.is_authenticated %}
         <li class="nav-item">
-          <a class="ml-2 btn btn-outline-danger" href="{% url 'feedback' %}"
+          <a class="ml-2 btn btn-outline-primary" href="{% url 'feedback' %}"
             >Feedback</a
           >
         </li>
