--- a/backend/templates/login.html
+++ b/backend/templates/login.html
@@ -101,7 +101,14 @@
 
 <div class="card mt-5" style="max-width: 35rem; margin: 20px auto;">
 	<div class="card-body justify-content-center">
-		{{msg}}
+		{% if msg %}
+      	<div class="alert alert-warning alert-dismissible fade show" role="alert">
+        		{{msg}}
+        	<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          		<span aria-hidden="true">&times;</span>
+        	</button>
+      	</div>
+      	{% endif %}
 		<h2 class="card-title text-center mb-4 mt-2">Login to Your Account</h2>
 		<form action="{% url 'login' %}" method="POST">
 			{% csrf_token %}
